project/deployment/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starbucks-worker-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: starbucks-worker
  replicas: 2 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: starbucks-worker
    spec:
      containers:
      - name: starbucks-worker
        image: blankss/starbucks-worker:latest
        ports:
        - containerPort: 8085
