project/deployment/rabbitmq-console.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-console
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - port: 9090
      targetPort: 15672
      protocol: TCP
  selector:
    name: rabbitmq
