project/deployment/springcashier-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-cashier-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 8085
      targetPort: 8085
  selector:
    name: spring-cashier
