project/deployment/kong-ingress-rule.yaml
apiVersion: networking.k8s.io/v1 #extensions/v1beta1
kind: Ingress
metadata:
  name: starbucks-api-ingress
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: spring-starbucks-api-service
            port:
              number: 8080
